fix: vh spill #3

--- a/gsc-frontend/src/index.css
+++ b/gsc-frontend/src/index.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  min-height: -moz-available;
+}
